# f3vita

./: .gitignore  CMakeLists.txt  README.md  generate_assets.py  pyproject.toml  rebuild.sh
include/: pattern.h  storage.h  types.h  ui.h
openspec/: project.md
openspec/changes/implement-storage-verification/: design.md  proposal.md  tasks.md
openspec/changes/implement-storage-verification/specs/storage-verification/: spec.md
sce_sys/livearea/contents/: template.xml
src/: debugScreen.c  debugScreen.h  main.c  pattern.c  storage.c  ui.c
tests/: Makefile  PLAN.md  README.md  test_pattern  test_pattern.c
